--- a/AUTHORS
+++ b/AUTHORS
@@ -13,8 +13,10 @@ Syd Adams
   - Radio panel. (From FlightGear/Aircraft/Instruments-3d/ky196/)
   - Template for the Nasal electrical system.
 
+Emmanuel BARANGER
+  - Propellers. (From FlightGear/Aircraft/Vickers-Vimy)
+
 Anonymous?
-  - Propellers. (From FlightGear/Aircraft/Boeing314/)
   - FDM engine definitions. (From FlightGear/Aircraft/Boeing314/)
   - Template for the sound configuration.
   - The mooring mast is based on Models/Airport/beacon.{ac,xml}
