--- a/AUTHORS
+++ b/AUTHORS
@@ -17,6 +17,6 @@ Emmanuel BARANGER
   - Propellers. (From FlightGear/Aircraft/Vickers-Vimy)
 
 Anonymous?
-  - FDM engine definitions. (From FlightGear/Aircraft/Boeing314/)
+  - FDM propeller definitions. (From FlightGear/Aircraft/Boeing314/)
   - Template for the sound configuration.
   - The mooring mast is based on Models/Airport/beacon.{ac,xml}
